[gd_scene load_steps=2 format=3 uid="uid://t8jp1w7vj0lv"]

[ext_resource type="Script" path="res://components/dialog/dialog.gd" id="1_tnyqr"]

[node name="Dialog" type="CanvasLayer"]
script = ExtResource("1_tnyqr")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 448.0
offset_right = 1152.0
offset_bottom = 576.0
color = Color(0, 0, 0, 0.752941)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 352.0
offset_top = 448.0
offset_right = 800.0
offset_bottom = 576.0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="PreviousDialogButton" type="Button" parent="."]
offset_left = 288.0
offset_top = 448.0
offset_right = 352.0
offset_bottom = 576.0
text = "<<"
metadata/_edit_use_anchors_ = true

[node name="NextDialogButton" type="Button" parent="."]
offset_left = 800.0
offset_top = 448.0
offset_right = 864.0
offset_bottom = 576.0
text = ">>"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="PreviousDialogButton" to="." method="_on_previous_dialog_button_pressed"]
[connection signal="pressed" from="NextDialogButton" to="." method="_on_next_dialog_button_pressed"]
